test/log/store/vstcb3in0_v_u64.txt
vstcb3in0_v_u64.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vstcb3in0_v_u64.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vstcb3in0_v_u64.c:37:78: error: expected declaration specifiers or '...' before ')' token
   37 | void vstcb3in0_v_u64_golden(uint64_t *base,uint64_t value[3][8],uint32_t imm,) {
      |                                                                              ^
vstcb3in0_v_u64.c: In function 'main':
vstcb3in0_v_u64.c:63:5: warning: implicit declaration of function 'vstcb3in0_v_u64_golden'; did you mean 'vstcb3in0_v_u64_m'? [-Wimplicit-function-declaration]
   63 |     vstcb3in0_v_u64_golden(exp_base,exp_value,exp_imm,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~
      |     vstcb3in0_v_u64_m
vstcb3in0_v_u64.c:63:55: error: 'exp_result' undeclared (first use in this function)
   63 |     vstcb3in0_v_u64_golden(exp_base,exp_value,exp_imm,exp_result);
      |                                                       ^~~~~~~~~~
vstcb3in0_v_u64.c:63:55: note: each undeclared identifier is reported only once for each function it appears in
vstcb3in0_v_u64.c:69:9: error: 'i' undeclared (first use in this function)
   69 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
vstcb3in0_v_u64.c:46:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   46 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vstcb3in0_v_u64.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vstcb3in0_v_u64"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vstcb3in0_v_u64.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vstcb3in0_v_u64.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed